--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,11 @@ dependencies:
   intl: ^0.20.2
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  file_selector: ^1.1.0
   path_provider: ^2.1.5
   rss_dart: ^1.0.14
+  url_launcher: ^6.3.2
+  xml: ^6.6.1
 
 dev_dependencies:
   flutter_test:
