--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   file_selector: ^1.1.0
+  flutter_cache_manager: ^3.4.1
   path_provider: ^2.1.5
   rss_dart: ^1.0.14
   url_launcher: ^6.3.2
