feat: 实现桌面布局和侧边栏搜索功能
- 在 `lib/ui/layout.dart` 中添加了桌面优先的 RSS 阅读布局常量。
- 在 `lib/utils/platform.dart` 中引入了平台检测工具。
- 增强了 `ArticleList` 以处理基于桌面布局的导航。
- 重构了 `ArticleListItem` 以改进 UI 和状态管理。
- 创建了自定义的 `DesktopTitleBar` 以改善桌面窗口管理。
- 更新了 `ReaderView` 以支持桌面布局并提升文章阅读体验。
- 在侧边栏中实现了搜索功能以动态过滤订阅源。
- 添加了新的侧边栏项目小部件以提高视觉一致性。
- 更新了 `pubspec.yaml` 和 `pubspec.lock` 中的依赖项以支持新功能。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   rss_dart: ^1.0.14
   url_launcher: ^6.3.2
   xml: ^6.6.1
+  timeago: ^3.6.1
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
