--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   file_selector: ^1.1.0
   flutter_cache_manager: ^3.4.1
+  pool: ^1.5.2
   path_provider: ^2.1.5
   rss_dart: ^1.0.14
   url_launcher: ^6.3.2
