chore: 忽略 `.claude/` 目录。

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ migrate_working_dir/
 .vscode/*.code-snippets
 .vscode/settings.json
 .vscode/tasks.json
+.claude/
 
 # Flutter/Dart/Pub related
 **/doc/api/
