feat: 为分类和订阅源添加过滤与同步设置
- 在分类和订阅源模型中新增过滤设置（`filterEnabled`、`filterKeywords`）和同步设置（`syncEnabled`、`syncImages`、`syncWebPages`、`showAiSummary`）。
- 更新本地化文件以支持过滤和同步功能的新字符串。
- 在设置详情面板中实现管理过滤和同步设置的 UI 组件。
- 创建辅助类以解析从订阅源、分类和全局应用设置的继承关系。
- 在仓库和操作中添加更新订阅源和分类的过滤与同步设置的方法。

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ packages/
 !packages/*/lib/
 !packages/*/assets/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+.codeartsdoer
