chore: 升级 CI 的 Flutter 和 Dart SDK 版本以保持兼容性

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ issue_tracker: https://github.com/YunFeng86/Flutter-Reader/issues
 version: 0.0.1-alpha.1  # CI会从Git Tag自动覆盖此版本号
 
 environment:
-  sdk: ^3.5.0  # 兼容GitHub Actions的Dart SDK版本（CI默认3.5.0）
+  sdk: ^3.6.0  # 匹配Flutter 3.27.0的Dart SDK版本
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
