--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'  # 使用最新稳定版（自带Dart 3.6+）
+          flutter-version: '3.38.5'  # 匹配本地开发环境（自带Dart 3.10.4）
           channel: 'stable'
           cache: true  # 启用Flutter SDK缓存，加速后续构建
 
