--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,7 @@ jobs:
             archive-cmd: |
               cd build/windows/x64/runner/Release
               rm -f *.pdb
-              7z a -tzip flutter_reader-windows-x64.zip *
-              mv flutter_reader-windows-x64.zip "${{ github.workspace }}"
+              7z a -tzip "$GITHUB_WORKSPACE/flutter_reader-windows-x64.zip" *
 
           # macOS构建（实验性，未测试）
           - os: macos-latest
@@ -34,8 +33,7 @@ jobs:
             artifact-name: flutter_reader-macos.zip
             archive-cmd: |
               cd build/macos/Build/Products/Release
-              zip -r flutter_reader-macos.zip flutter_reader.app
-              mv flutter_reader-macos.zip "${{ github.workspace }}"
+              zip -r "$GITHUB_WORKSPACE/flutter_reader-macos.zip" flutter_reader.app
 
           # Linux构建（实验性，未测试）
           - os: ubuntu-latest
@@ -45,8 +43,7 @@ jobs:
             artifact-name: flutter_reader-linux-x64.tar.gz
             archive-cmd: |
               cd build/linux/x64/release/bundle
-              tar -czf flutter_reader-linux-x64.tar.gz *
-              mv flutter_reader-linux-x64.tar.gz "${{ github.workspace }}"
+              tar -czf "$GITHUB_WORKSPACE/flutter_reader-linux-x64.tar.gz" *
             deps-cmd: sudo apt-get update && sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev
 
     runs-on: ${{ matrix.os }}
