--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ issue_tracker: https://github.com/YunFeng86/Flutter-Reader/issues
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1-alpha.1  # CI会从Git Tag自动覆盖此版本号
+version: 0.0.1-alpha.6  # CI会从Git Tag自动覆盖此版本号
 
 environment:
   sdk: ^3.10.0  # 匹配本地开发环境的Dart SDK版本
@@ -71,6 +71,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.5
   isar_generator: ^3.1.0+1
+  flutter_launcher_icons: ^0.14.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -121,3 +122,28 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Flutter Launcher Icons配置
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"  # 需要准备一张 1024x1024 的PNG图标
+
+  # Android自适应图标
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
+
+  # macOS
+  macos:
+    generate: true
+    image_path: "assets/icons/app_icon.png"
+
+  # Windows
+  windows:
+    generate: true
+    image_path: "assets/icons/app_icon.png"
+
+  # Linux
+  linux:
+    generate: true
+    image_path: "assets/icons/app_icon.png"
