fix: 更新构建脚本以重命名构建产物文件，包含版本号

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,9 @@ jobs:
             artifact-path: build/windows/x64/runner/Release
             artifact-name: flutter_reader-windows-x64.zip
             archive-cmd: |
-              VERSION="${{ github.ref_name }}"
-              VERSION=${VERSION#v}
               cd build/windows/x64/runner/Release
               rm -f *.pdb
-              7z a -tzip "$GITHUB_WORKSPACE/flutter_reader-windows-x64-${VERSION}.zip" *
+              7z a -tzip "$GITHUB_WORKSPACE/flutter_reader-windows-x64.zip" *
 
           # macOS构建（实验性，未测试）
           - os: macos-latest
@@ -34,10 +32,8 @@ jobs:
             artifact-path: build/macos/Build/Products/Release
             artifact-name: flutter_reader-macos.zip
             archive-cmd: |
-              VERSION="${{ github.ref_name }}"
-              VERSION=${VERSION#v}
               cd build/macos/Build/Products/Release
-              zip -r "$GITHUB_WORKSPACE/flutter_reader-macos-${VERSION}.zip" flutter_reader.app
+              zip -r "$GITHUB_WORKSPACE/flutter_reader-macos.zip" flutter_reader.app
 
           # Linux构建（实验性，未测试）
           - os: ubuntu-latest
@@ -46,10 +42,8 @@ jobs:
             artifact-path: build/linux/x64/release/bundle
             artifact-name: flutter_reader-linux-x64.tar.gz
             archive-cmd: |
-              VERSION="${{ github.ref_name }}"
-              VERSION=${VERSION#v}
               cd build/linux/x64/release/bundle
-              tar -czf "$GITHUB_WORKSPACE/flutter_reader-linux-x64-${VERSION}.tar.gz" *
+              tar -czf "$GITHUB_WORKSPACE/flutter_reader-linux-x64.tar.gz" *
             deps-cmd: sudo apt-get update && sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev
 
     runs-on: ${{ matrix.os }}
@@ -183,6 +177,30 @@ jobs:
           else
             echo "is_prerelease=false" >> $GITHUB_OUTPUT
             echo "version_type=正式版本" >> $GITHUB_OUTPUT
+          fi
+
+      # 重命名artifact文件以包含版本号
+      - name: Rename artifacts with version
+        run: |
+          VERSION="${{ github.ref_name }}"
+          VERSION=${VERSION#v}
+
+          # 重命名Windows构建
+          if [ -f artifacts/windows-release/flutter_reader-windows-x64.zip ]; then
+            mv artifacts/windows-release/flutter_reader-windows-x64.zip \
+               artifacts/windows-release/flutter_reader-windows-x64-${VERSION}.zip
+          fi
+
+          # 重命名macOS构建
+          if [ -f artifacts/macos-release/flutter_reader-macos.zip ]; then
+            mv artifacts/macos-release/flutter_reader-macos.zip \
+               artifacts/macos-release/flutter_reader-macos-${VERSION}.zip
+          fi
+
+          # 重命名Linux构建
+          if [ -f artifacts/linux-release/flutter_reader-linux-x64.tar.gz ]; then
+            mv artifacts/linux-release/flutter_reader-linux-x64.tar.gz \
+               artifacts/linux-release/flutter_reader-linux-x64-${VERSION}.tar.gz
           fi
 
       - name: Create Release
