feat: 更新 Windows 安装器构建过程，增强输出目录和文件检查

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -268,41 +268,47 @@ jobs:
       - name: Check generated installer
         shell: powershell
         run: |
-          Write-Host "=== All files in current directory ==="
+          Write-Host "=== Current working directory ==="
+          Write-Host "PWD: $(Get-Location)"
+          
+          Write-Host "`n=== All files in current directory ==="
           Get-ChildItem -Path "." -File | ForEach-Object {
             Write-Host "File: $($_.Name) ($([math]::Round($_.Length / 1MB, 2)) MB)"
           }
           
-          Write-Host "`n=== Looking for EXE files ==="
-          Get-ChildItem -Path "." -File -Filter "*.exe" | ForEach-Object {
-            Write-Host "EXE: $($_.Name) ($([math]::Round($_.Length / 1MB, 2)) MB)"
-          }
-          
-          Write-Host "`n=== Looking for ISS files ==="
-          if (Test-Path "installer.iss") {
-            Write-Host "Found installer.iss, showing content:"
-            Get-Content "installer.iss" | ForEach-Object { Write-Host "  $_" }
-          } else {
-            Write-Host "installer.iss not found!"
-          }
-          
-          Write-Host "`n=== Checking if Output folder exists ==="
+          Write-Host "`n=== Checking Output directory ==="
           if (Test-Path "Output") {
-            Write-Host "Output folder exists:"
+            Write-Host "Output folder exists, contents:"
             Get-ChildItem -Path "Output" -File | ForEach-Object {
               Write-Host "  Output/$($_.Name) ($([math]::Round($_.Length / 1MB, 2)) MB)"
             }
           } else {
             Write-Host "No Output folder found"
           }
+          
+          Write-Host "`n=== Checking installer.iss content ==="
+          if (Test-Path "installer.iss") {
+            Write-Host "installer.iss exists, showing OutputBaseFilename line:"
+            Get-Content "installer.iss" | Where-Object { $_ -like "*OutputBaseFilename*" }
+          } else {
+            Write-Host "installer.iss not found!"
+          }
+          
+          Write-Host "`n=== Checking windows-release extraction ==="
+          if (Test-Path "windows-release\temp") {
+            Write-Host "windows-release\temp exists:"
+            Get-ChildItem -Path "windows-release\temp" -File | ForEach-Object {
+              Write-Host "  $($_.Name)"
+            }
+          } else {
+            Write-Host "windows-release\temp not found!"
+          }
 
       - name: Upload Windows Installer
         uses: actions/upload-artifact@v4
         with:
           name: windows-installer
-          path: |
-            flutter_reader-windows-x64-installer-*.exe
-            Output/flutter_reader-windows-x64-installer-*.exe
+          path: Output/flutter_reader-windows-x64-installer-*.exe
           retention-days: 90
           if-no-files-found: error
 
