--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   pool: ^1.5.2
   path_provider: ^2.1.5
+  reorderable_grid: ^1.0.13
   rss_dart: ^1.0.14
   shared_preferences: ^2.3.4
   url_launcher: ^6.3.2
