--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.cloudwind" "\0"
             VALUE "FileDescription", "Fleur" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "fleur" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2026 com.cloudwind. All rights reserved." "\0"
             VALUE "OriginalFilename", "fleur.exe" "\0"
             VALUE "ProductName", "Fleur" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
