refactor: 重构路径管理并迁移旧数据处理
- 使用 PathManager 替换 PathUtils，实现集中式路径管理。
- 更新 ImageMetaStore、AppSettingsStore、ReaderProgressStore 和 ReaderSettingsStore 以使用 PathManager 获取文件路径。
- 引入 ShellService 处理操作系统特定的文件管理操作。
- 增强迁移逻辑以处理旧文件位置并确保数据完整性。
- 更新测试以反映路径管理变更并确保与新结构的兼容性。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   file_selector: ^1.1.0
   flutter_cache_manager: ^3.4.1
   pool: ^1.5.2
+  path: ^1.9.0
   path_provider: ^2.1.5
   reorderable_grid: ^1.0.13
   rss_dart: ^1.0.14
