--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ issue_tracker: https://github.com/cloudwind/fleur/issues
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1-alpha.9  # CI会从Git Tag自动覆盖此版本号
+version: 0.1.1  # CI会从Git Tag自动覆盖此版本号
 
 environment:
   sdk: ^3.10.0  # 匹配本地开发环境的Dart SDK版本
@@ -65,6 +65,7 @@ dependencies:
   dynamic_color: ^1.8.1
   google_fonts: ^7.0.2
   flutter_local_notifications: ^19.5.0
+  package_info_plus: ^8.1.2
 
 dev_dependencies:
   flutter_test:
@@ -96,9 +97,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - LICENSE
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
