--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   google_fonts: ^7.0.2
   flutter_local_notifications: ^19.5.0
   package_info_plus: ^8.1.2
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
