--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   package_info_plus: ^8.1.2
   flutter_secure_storage: ^9.2.4
+  archive: ^4.0.7
 
 dev_dependencies:
   flutter_test:
